packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/data-type-decimal-length-zero.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event definition validation, verify
if a decimal data type having zero digits is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="number:decimal:0:0"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
